<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
android:orientation="vertical"
    tools:context="com.app.phant0m.memoria_interna_externa.MemExt">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/primerM"
        />
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ETarchivo"
        />




    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/BtGuardar"
        android:text="@string/guardar"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/BtAbrir"
        android:text="@string/abrir"/>



</LinearLayout>
